--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
     "body-parser": "^1.20.3",
+    "bs58": "^6.0.0",
     "bson": "^6.10.3",
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
@@ -16,9 +17,11 @@
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
+    "dotenv": "^16.4.7",
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
     "encodeurl": "^2.0.0",
@@ -95,6 +98,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -107,7 +112,7 @@
   "bugs": {
     "url": "https://github.com/hafsah-1/Focus-timer-web3/issues"
   },
-  "homepage": "https://github.com/hafsah-1/Focus-timer-web3#readme",
+  "homepage": "https://hafsah-1.github.io/Focus-timer-web3",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -119,5 +124,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
