--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/web3.js": "^1.98.0",
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
